--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,1 +1,1 @@
-<show-character-card [character]="character"></show-character-card>
+<character-overview [character]="character"></character-overview>
