Adding a bunch of features

--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -47,8 +47,7 @@
     </mat-grid-tile>
   </mat-grid-list>
 
-  <h2 class="section-subtitle">Attributes</h2>
-  <mat-grid-list id="attributes" cols="5" rowHeight="2:1">
+  <mat-grid-list id="overview-stats" cols="5" rowHeight="2:1">
     <mat-grid-tile>
       <mat-card>
         <h4>Hit Dice</h4>
