--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -1,17 +1,6 @@
 .show-character-card
   width: 85%
   margin: 8px auto
-  h1.section-title
-    font-size: 64px
-    line-height: 64px
-    text-align: center
-    margin-bottom: 3px
-  h2.section-subtitle
-    font-size: 32px
-    font-weight: normal
-    text-align: center
-
-
   #overview
     mat-card
       width: 85%
@@ -19,7 +8,7 @@
         text-align: center
 
 
-  #attributes
+  #overview-stats
     mat-card
       width: 85%
       text-align: center
