--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,3 +2,24 @@
 body
   margin: 0
   background-color: #EFEFEF
+
+h1.section-title
+  font-size: 64px
+  line-height: 64px
+  text-align: center
+  margin-bottom: 3px
+
+h2.section-subtitle
+  font-size: 32px
+  font-weight: normal
+  text-align: center
+
+.number-card
+  mat-card
+    width: 85%
+    text-align: center
+    min-height: 50%
+    h4
+      text-align: center
+    strong
+      font-size: 28px
