Purse and magic items

--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,4 +1,5 @@
 <character-overview [character]="character"></character-overview>
 <character-attributes [character]="character"></character-attributes>
 <character-experience [character]="character"></character-experience>
+<character-purse [character]="character"></character-purse>
 <character-inventory [character]="character"></character-inventory>
