Add inventory, navigation, purse changes, style changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<mat-toolbar><span>ODND Character Sheet</span></mat-toolbar>
+<mat-toolbar><a routerLink="/">ODND Character Sheet</a> <span> poop</span>
+  <ul>
+    <li><a routerLink="/character" routerLinkActive="active">Character</a></li>
+    <li><a routerLink="/notes" routerLinkActive="active">Notes</a></li>
+  </ul>
+</mat-toolbar>
 <router-outlet></router-outlet>
