--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -25,6 +25,10 @@
           <mat-divider></mat-divider>
           <mat-list-item><span>Profession:</span> {{character.profession}} </mat-list-item>
           <mat-divider></mat-divider>
+          <mat-list-item><span>Speaks:</span>
+            {{character.known_languages.concat(',')}}
+          </mat-list-item>
+          <mat-divider></mat-divider>
         </mat-list>
       </mat-card>
     </mat-grid-tile>
