--- a/src/styles.sass
+++ b/src/styles.sass
@@ -14,6 +14,14 @@ h2.section-subtitle
   font-weight: normal
   text-align: center
 
+.container
+  width: 85%
+  margin: 0 auto
+  display: flex
+  justify-content: space-evenly
+  flex-flow: row
+  flex-wrap: wrap
+
 .number-card
   mat-card
     width: 85%
@@ -23,3 +31,8 @@ h2.section-subtitle
       text-align: center
     strong
       font-size: 28px
+
+.mat-grid-tile .mat-figure
+  justify-content: space-evenly !important
+  align-items: flex-start !important
+
