Note section, a bit of refactoring

--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -3,3 +3,4 @@
 <character-experience [character]="character"></character-experience>
 <character-purse [character]="character"></character-purse>
 <character-inventory [character]="character"></character-inventory>
+<character-notes [character]="character"></character-notes>
