--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar><a routerLink="/">ODND Character Sheet</a> <span> poop</span>
+<mat-toolbar><a routerLink="/">ODND Character Sheet</a>
   <ul>
     <li><a routerLink="/character" routerLinkActive="active">Character</a></li>
-    <li><a routerLink="/notes" routerLinkActive="active">Notes</a></li>
+    <li><a routerLink="/adventure-log" routerLinkActive="active">Adventure Log</a></li>
   </ul>
 </mat-toolbar>
 <router-outlet></router-outlet>
