--- a/src/app/show-character/character-attributes/character-attributes.component.html
+++ b/src/app/show-character/character-attributes/character-attributes.component.html
@@ -1,5 +1,5 @@
 <div class="character-attributes number-card">
-  <h2 class="section-subtitle"> Attributes </h2>
+  <h2 class="section-subtitle"> Abilities </h2>
   <mat-grid-list id="attributes" cols="6" rowHeight="2:1">
     <mat-grid-tile>
       <mat-card ngClass="{{character.primeAbility() === 'strength' ? 'prime' : ''}}">
