--- a/src/app/show-character/character-attributes/character-attributes.component.sass
+++ b/src/app/show-character/character-attributes/character-attributes.component.sass
@@ -1,6 +1,8 @@
-.character-attributes
-  width: 85%
-  margin: 0 auto
+.prime
+  border: 3px solid #222288
+.prime-text
+  color: #222288
 
-  .prime
-    border: 1px solid blue
+mat-card
+  width: 13%
+
