--- a/src/styles.sass
+++ b/src/styles.sass
@@ -16,13 +16,11 @@ h2.section-subtitle
 
 .container
   width: 85%
-  margin: 0 auto
+  margin: 16px auto 32px auto
   display: flex
-  justify-content: space-evenly
+  justify-content: space-between
   flex-flow: row
   flex-wrap: wrap
-
-.number-card
   mat-card
     width: 85%
     text-align: center
@@ -31,8 +29,3 @@ h2.section-subtitle
       text-align: center
     strong
       font-size: 28px
-
-.mat-grid-tile .mat-figure
-  justify-content: space-evenly !important
-  align-items: flex-start !important
-
