--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -1,19 +1,26 @@
-.show-character-card
-  width: 85%
-  margin: 8px auto
-  #overview
-    mat-card
-      width: 85%
-      h2
-        text-align: center
-
-
-  #overview-stats
-    mat-card
-      width: 85%
+#overview
+  display: flex
+  justify-content: space-between
+  mat-card
+    width: 20%
+    h2
       text-align: center
-      min-height: 50%
-      h4
-        text-align: center
-      strong
-        font-size: 28px
+
+
+#overview-stats
+  display: flex
+  justify-content: space-between
+  margin-top: 24px
+  mat-card
+    width: 15%
+    text-align: center
+    min-height: 50%
+    h4
+      text-align: center
+      font-size: 20px
+    strong
+      font-size: 28px
+    p
+      text-align: left
+      font-size: 28px
+      padding: 12px
