--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,5 +1,6 @@
 <character-overview [character]="character"></character-overview>
 <character-attributes [character]="character"></character-attributes>
+<character-derived-attributes [character]="character"> </character-derived-attributes>
 <character-experience [character]="character"></character-experience>
 <character-purse [character]="character"></character-purse>
 <character-inventory [character]="character"></character-inventory>
