--- a/src/app/adventure-log/notes/notes.component.sass
+++ b/src/app/adventure-log/notes/notes.component.sass
@@ -4,3 +4,9 @@ mat-accordion
     width: 100%
     min-height: 200px
 
+
+#add-note-button, .delete-note
+  margin: 12px auto
+  text-align: center
+
+
