--- a/src/app/adventure-log/adventure-log.component.html
+++ b/src/app/adventure-log/adventure-log.component.html
@@ -1,1 +1,2 @@
 <adventure-log-notes [notes]="notes"></adventure-log-notes>
+<adventure-log-sessions [sessions]="sessions"></adventure-log-sessions>
