--- a/src/app/adventure-log/notes/notes.component.html
+++ b/src/app/adventure-log/notes/notes.component.html
@@ -1,5 +1,8 @@
 <div id="notes-section" class="container">
   <h2 class="section-subtitle">Notes</h2>
+  <button (click)="addNote()" id="add-note-button" mat-mini-fab aria-label="Add Note Button" color="primary">
+    <mat-icon>add</mat-icon>
+  </button>
   <mat-accordion>
     <mat-expansion-panel *ngFor="let note of notes">
       <mat-expansion-panel-header>
@@ -7,18 +10,19 @@
           {{note.name}}
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <input type="text" [(ngModel)]="note.name" />
-      <textarea [(ngModel)]="note.content">{{note.content}}</textarea>
+      <mat-form-field>
+        <mat-label> Title:</mat-label>
+        <input matInput type="text" [(ngModel)]="note.name"/>
+      </mat-form-field>
+      <textarea matInput [(ngModel)]="note.content">{{note.content}}</textarea>
       <p class="delete-note">
-      <button (click)="deleteNote(note)"  mat-mini-fab aria-label="Delete Note" color="warn">
-        <mat-icon>delete</mat-icon>
-      </button>
+        <button (click)="deleteNote(note)" mat-mini-fab aria-label="Delete Note" color="warn">
+          <mat-icon>delete</mat-icon>
+        </button>
       </p>
     </mat-expansion-panel>
   </mat-accordion>
-  <button (click)="addNote()" id="add-note-button" mat-mini-fab aria-label="Add Note Button" color="primary">
-    <mat-icon>add</mat-icon>
-  </button>
+
 </div>
 
 
