--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,11 +8,13 @@ h1.section-title
   line-height: 64px
   text-align: center
   margin-bottom: 3px
+  width: 100%
 
 h2.section-subtitle
   font-size: 32px
   font-weight: normal
   text-align: center
+  width: 100%
 
 .container
   width: 85%
